--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,27 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+      with:
+        version: v0.10.0
+        buildkitd-flags: --debug
+    
     - name: Build the Docker image
-      run: docker build . --file ClientAPI/Dockerfile --tag client-api:$(date +%s)
+      run: docker build . --file ClientAPI/Dockerfile --tag dapr-zeebe-demo/client-api:$(date +%s) --tag dapr-zeebe-demo/client-api:latest
+    
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        push: true
+        tags: robertvejvoda/dapr-zeebe-demo/client-api:latest robertvejvoda/dapr-zeebe-demo/client-api:$(date +%s)
+   
+    
+      
