--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: ./ClientAPI
+          context: .
+          file: ./ClientAPI/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: robertvejvoda/dapr-zeebe-demo/client-api:latest 
