--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: |
+            docker.io/robertvejvoda/dapr-zeebe-demo
+            
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
@@ -35,7 +42,8 @@ jobs:
           file: ./ClientAPI/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: robertvejvoda/dapr-zeebe-demo/client-api:latest 
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }} 
    
     
       
