github actions typo fix

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,14 @@
 name: Docker Image CI
 
 on:
+  
   push:
     branches: 
       - net7
     tags:
       - "v*.*.*"
-  pull-request:
+  
+  pull_request:
     branches:
       - main
   
