--- a/dapr/configuration/dapr-config.yaml
+++ b/dapr/configuration/dapr-config.yaml
@@ -2,12 +2,11 @@ apiVersion: dapr.io/v1alpha1
 kind: Configuration
 metadata:
   name: config
-  namespace: camunda-demo
 spec:
   tracing:
     samplingRate: "1"
     zipkin:
-      endpointAddress: "http://localhost:9411/api/v2/spans"
+      endpointAddress: "http://host.docker.internal:9411/api/v2/spans"
   metrics:
     enabled: true
   
